add naive sqlite3

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 WEAVIATE_API_URL=https://xxx
 WEAVIATE_API_KEY=yyy
 OPENAI_API_KEY=sk-zzz
+# developer's duty to make sure the directory is writable
+SQLITE3_DB_PATH=data/sqlite3.db
+ARXIV_DIRECTORY=data
