add module database/crawl/text

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 WEAVIATE_API_URL=https://xxx
 WEAVIATE_API_KEY=yyy
 OPENAI_API_KEY=sk-zzz
+
 # developer's duty to make sure the directory is writable
-SQLITE3_DB_PATH=data/sqlite3.db
+SQLITE3_DB_PATH=data/arxiv.sqlite3
 ARXIV_DIRECTORY=data
+
+# 1 for debug, 0 for production
+ARXIVGPT_SAVE_NUMPY_VECTOR=1
+ARXIVGPT_SAVE_NUMPY_VECTOR_FILE=chunk_vector.npy
