--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,18 @@ WEAVIATE_API_KEY=yyy
 OPENAI_API_KEY=sk-zzz
 
 # developer's duty to make sure the directory is writable
-SQLITE3_DB_PATH=data/arxiv.sqlite3
-ARXIV_DIRECTORY=data
+SQLITE3_DB_PATH=/public_data/arxiv-gpt/arxiv.sqlite3
+ARXIV_DIRECTORY=/public_data/arxiv-gpt/arxiv
+# ARXIV_DIRECTORY=data
+
+ARXIVGPT_MAX_TOKEN_PER_CHUNK=400
+ARXIVGPT_MAX_TOKEN_PER_QA=1800
 
 # 1 for debug, 0 for production
 ARXIVGPT_SAVE_NUMPY_VECTOR=1
-ARXIVGPT_SAVE_NUMPY_VECTOR_FILE=chunk_vector.npy
+
+# the only user allowed to log in
+ONLY_USER_NAME='_ONLY_USER_NAME'
+ONLY_USER_PASS='xxxx'
+
+CRAWL_ONE_DAY_LIMIT=200
